Fix sidebar overflow

--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 * {
     margin: 0;
     padding: 0;
+    box-sizing: border-box;
 }
 
 .page {
@@ -293,6 +294,7 @@
     border-radius: 10px;
     border-left: 7px solid #fe4a49ff;
     background-color: white;
+    box-shadow: rgba(0, 0, 0, 0.16) 0px 3px 6px, rgba(0, 0, 0, 0.23) 0px 3px 6px;
 }
 
 .project-text {
@@ -341,9 +343,11 @@ button.share {
 .announcements-container {
     display: grid;
     gap: 10px;
-    border: 5px solid pink;
+    border-radius: 10px;
     padding: 20px;
     flex: 1;
+    background-color: white;
+    box-shadow: rgba(0, 0, 0, 0.16) 0px 3px 6px, rgba(0, 0, 0, 0.23) 0px 3px 6px;
 }
 
 .announcement {
@@ -368,9 +372,11 @@ button.share {
 .trending-container {
     display: grid;
     gap: 15px;
-    border: 5px solid blue;
     padding: 20px;
+    border-radius: 10px;
     flex: 1;
+    background-color: white;
+    box-shadow: rgba(0, 0, 0, 0.16) 0px 3px 6px, rgba(0, 0, 0, 0.23) 0px 3px 6px;
 }
 
 .trending-item {
